# ScryCompiler

./: CMakeLists.txt  Cargo.toml  README.md  main.cpp
AST/: ParseExpression.cpp  ParseExtern.cpp  ParseNumExpr.cpp  ParsePrototype.cpp  ParseVariableExpression.cpp  ast.cpp
include/: ast.h  consoleColors.h  lexer.h
lexer/: lexer.cpp
src/: lexer.rs  main.rs
testfiles/: fibonacci.scry
tests/: fibonacci.scry  fibonacci.skib  helloworld.skib
